--- a/src/components/layout/styles.css
+++ b/src/components/layout/styles.css
@@ -1,3 +1,14 @@
+:root {
+  --mineshaft: #282828;
+  --wildsand: #f5f5f5;
+
+  --charcoal: #264653;
+  --persiangreen: #2a9d8f;
+  --maize: #E9C46A;
+  --sandybrown: #F4A261;
+  --terracotta: #E76F51;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -12,6 +23,23 @@ svg {
   fill: currentColor;
 }
 
-.menu {
-  border-bottom: 0 !important;
+a {
+  color: inherit;
+}
+
+.layout {
+  display: flex;
+  min-height: 100vh;
+  position: relative;
+  overflow-x: hidden;
+}
+
+.content {
+  flex: 1;
+  transform: translateX(0);
+  transition: transform 0.2s ease-in-out;
+}
+
+.content.sideBarVisible {
+  transform: translateX(-75vw);
 }
