--- a/src/containers/home/styles.css
+++ b/src/containers/home/styles.css
@@ -1,85 +1,54 @@
-.heading {
-  color: var(--primary);
-  font-weight: normal;
-  margin: 1rem 0;
+.hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.heading:hover:after {
-  transform: scaleX(1);
-}
-
-.column {
-  margin-bottom: 2rem;
-}
-
-.text {
+.text h1 {
+  text-align: center;
   margin: 0;
 }
 
-.features {
-  margin: 0;
-  padding: 0;
+.text h3 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.features li {
-  list-style: none;
-  font-size: 1rem;
+.text h3 svg {
+  fill: red;
+  margin: 0 0.25rem;
+}
+
+.container {
+  margin-top: 1rem;
+  padding: 0 1rem;
+}
+
+.tech h2, .about h2 {
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+.tech .grid {
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  row-gap: 1rem;
+}
+
+.tech .grid .column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.tech .grid .column svg {
+  font-size: 3rem;
   margin-bottom: 0.5rem;
 }
 
-.code {
-  background-color: var(--primary-light);
-  color: var(--primary);
-  padding: 0 0.5rem;
-  font-size: 1.2rem;
-  font-weight: normal;
-}
-
-.keyword {
-  color: var(--primary);
-}
-
-.loader {
-  height: 200px;
-  color: var(--primary-light);
-  animation: none;
-  transform: rotate(45deg);
-}
-
-.info {
-  margin-bottom: 3rem;
-}
-
-@media (min-width: 1024px) {
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(3, 33%);
-    justify-content: center;
-    background-color: var(--alabaster);
-    padding: 1rem;
-    margin: 3rem 0;
-  }
-
-  .heading {
-    margin-top: 0;
-  }
-
-  .loader {
-    height: 350px;
-  }
-
-  .column {
-    justify-self: center;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .grid {
-    background-color: var(--tundora);
-    color: var(--alabaster);
-  }
-
-  .code {
-    background-color: var(--tundora);
-  }
+.about p {
+  margin-top: 0;
+  margin-bottom: 1rem;
 }
