--- a/src/components/layout/styles.css
+++ b/src/components/layout/styles.css
@@ -19,6 +19,7 @@ body {
   font-family: 'Lato', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scroll-behavior: smooth;
 }
 
 svg {
