--- a/src/components/project/styles.css
+++ b/src/components/project/styles.css
@@ -2,24 +2,35 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-bottom: 3px solid #eee;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 .project:last-child {
   border-bottom: 0;
+  margin-bottom: 0;
 }
 
 .imageLink {
   width: 100%;
   max-width: 640px;
-  margin-bottom: 2rem;
-  border: 1px solid #eee;
+  margin-bottom: 1rem;
+  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.1);
+  border-radius: 0.25rem;
 }
 
 .image {
   display: block;
   width: 100%;
+  border-radius: 0.25rem;
+}
+
+.link {
+  display: block;
+  color: var(--terracotta);
+  font-weight: 600;
+  margin: 0;
+  margin-bottom: 0.5rem;
+  text-decoration: none;
 }
 
 .description {
@@ -29,36 +40,31 @@
 }
 
 .description p {
-  color: gray;
+  margin: 0;
 }
 
 @media (min-width: 1024px) {
   .project {
-    flex-direction: row;
-    margin: 3rem 0;
-    align-items: center;
-    padding-bottom: 3rem;
-  }
-
-  .imageLink {
-    margin: 0;
-    margin-right: 3rem;
-    width: 640px;
-  }
-
-  .project:nth-child(odd) {
     flex-direction: row-reverse;
+    justify-content: space-between;
+    margin-bottom: 3rem;
   }
 
-  .project:nth-child(odd) .imageLink {
+  .project .imageLink {
+    margin-bottom: 0;
     margin-left: 3rem;
-    margin-right: 0;
   }
-}
 
+  .project .description {
+    padding-bottom: 0;
+  }
 
-@media (prefers-color-scheme: dark) {
-  .imageLink {
-    border-color: var(--tundora);
+  .project:nth-child(even) {
+    flex-direction: row;
+  }
+
+  .project:nth-child(even) .imageLink {
+    margin-left: 0;
+    margin-right: 3rem;
   }
 }
