mobile and desktop

--- a/src/components/layout/styles.css
+++ b/src/components/layout/styles.css
@@ -1,6 +1,6 @@
 :root {
   --mineshaft: #282828;
-  --gallery: #eeeeee;
+  --gallery: #f5f5f5;
 
   --charcoal: #264653;
   --persiangreen: #2a9d8f;
@@ -16,10 +16,11 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   scroll-behavior: smooth;
+  color: var(--mineshaft);
 }
 
 svg {
