--- a/src/components/container/styles.css
+++ b/src/components/container/styles.css
@@ -16,8 +16,13 @@
   text-align: center;
 }
 
-@media (min-width: 1280px) {
+.container h2 {
+  font-size: 2rem;
+}
+
+@media (min-width: 1440px) {
   .container {
-    padding: 1rem 0;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
