--- a/src/components/work-history/styles.css
+++ b/src/components/work-history/styles.css
@@ -1,10 +1,15 @@
 .container {
   display: flex;
   flex-direction: column;
+  background-color: white;
   box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.1);
-  margin-bottom: 1.5rem;
+  margin-bottom: 2rem;
   padding: 1rem;
   border-radius: 0.25rem;
+}
+
+.container:last-child {
+  margin-bottom: 0;
 }
 
 .container h4, h5, h6 {
@@ -28,7 +33,7 @@
 
 .container .projectHeading {
   font-size: 1.3rem;
-  font-weight: 600;
+  font-weight: normal;
   margin-bottom: 1rem;
 }
 
@@ -61,4 +66,11 @@
   border-bottom: 0;
   margin-bottom: 0;
   padding-bottom: 0;
+}
+
+@media (min-width: 768px) {
+  .container {
+    padding: 2rem;
+    margin-bottom: 3rem;
+  }
 }
