--- a/src/containers/not-found/styles.css
+++ b/src/containers/not-found/styles.css
@@ -1,13 +1,32 @@
-.notFound {
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
-.notFound h1 {
-  color: var(--primary);
+.container h2 {
+  margin: 0;
+}
+
+.container p {
+  margin-top: 0;
+  margin-bottom: 1rem;
 }
 
 .image {
-  height: 300px;
+  max-width: 360px;
+  width: 100%;
+}
+
+@media (min-width: 768px) {
+  .container {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+  }
+
+  .image {
+    margin: 3rem 0;
+  }
 }
