--- a/src/components/sidebar/styles.scss
+++ b/src/components/sidebar/styles.scss
@@ -1,3 +1,5 @@
+@use "../../styles/colors";
+
 .sidebar {
   position: absolute;
   right: 0;
@@ -6,21 +8,21 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  background-color: var(--terracotta);
+  background-color: colors.$terracotta;
   color: white;
   transform: translateX(75vw);
   width: 75vw;
   transition: transform 0.2s ease-in-out, z-index 0.2s ease-in-out;
   font-size: 1.5rem;
-}
 
-.sidebar.visible {
-  transform: translateX(0);
-}
+  &.visible {
+    transform: translateX(0);
+  }
 
-.sidebar a {
-  margin-top: 1rem;
-  font-size: inherit;
+  a {
+    margin-top: 1rem;
+    font-size: inherit;
+  }
 }
 
 .close {
