--- a/src/components/contact/styles.scss
+++ b/src/components/contact/styles.scss
@@ -39,6 +39,8 @@
     color: white;
     transform: scale(1);
     transition: 0.2s ease-in-out transform;
+    height: 3rem;
+    width: 3rem;
 
     img {
       height: 3rem;
