--- a/src/components/project/project.module.scss
+++ b/src/components/project/project.module.scss
@@ -55,8 +55,7 @@
   color: colors.$terracotta;
   font-size: 1.2rem;
   font-weight: 600;
-  margin: 0;
-  margin-bottom: 0.5rem;
+  margin: 0 0 0.5rem;
   text-decoration: none;
 
   @media (min-width: breakpoints.$desktop) {
