Added contact form to footer

--- a/src/components/nav/nav.module.scss
+++ b/src/components/nav/nav.module.scss
@@ -25,11 +25,11 @@
     transition: border 0.2s ease-in-out;
 
     &:hover {
-      border-bottom: 2px solid colors.$terracotta;
+      border-bottom: 2px solid colors.$primary;
     }
 
     &.active {
-      color: colors.$terracotta;
+      color: colors.$primary;
     }
   }
 
