--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -8,7 +8,7 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  background-color: colors.$terracotta;
+  background-color: colors.$primary;
   color: white;
   transform: translateX(75vw);
   width: 75vw;
