--- a/src/components/work-project/work-project.module.scss
+++ b/src/components/work-project/work-project.module.scss
@@ -27,7 +27,7 @@
 .badge {
   margin-right: 0.5rem;
   margin-top: 0.5rem;
-  background-color: colors.$persiangreen;
+  background-color: colors.$secondary;
   color: white;
   border-radius: 0.25rem;
   padding: 0.25rem 0.5rem;
