--- a/src/containers/home/home.module.scss
+++ b/src/containers/home/home.module.scss
@@ -34,7 +34,7 @@
         justify-content: flex-start;
         margin: 1rem 0;
         padding-bottom: 1rem;
-        border-bottom: 2px solid colors.$terracotta;
+        border-bottom: 2px solid colors.$primary;
       }
     }
 
