--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,7 +1,7 @@
 $mineshaft: #282828;
 $gallery: #f5f5f5;
 $charcoal: #264653;
-$persiangreen: #2a9d8f;
-$maize: #E9C46A;
-$sandybrown: #F4A261;
-$terracotta: #E76F51;
+$primary: #e45c3b;
+$secondary: #3BC3E4;
+$torch-red: #d61e1e;
+$dusty-gray: #999999;
