--- a/src/components/work-history/work-history.module.scss
+++ b/src/components/work-history/work-history.module.scss
@@ -27,10 +27,10 @@
   h5 {
     font-size: 0.85rem;
     font-weight: normal;
-    color: colors.$terracotta;
+    color: colors.$primary;
     padding-bottom: 1rem;
     margin-bottom: 1rem;
-    border-bottom: 2px solid colors.$terracotta;
+    border-bottom: 2px solid colors.$primary;
   }
 
   .heading {
@@ -55,7 +55,7 @@
     list-style: none;
 
     li {
-      border-bottom: 2px solid colors.$terracotta;
+      border-bottom: 2px solid colors.$primary;
       padding-bottom: 1rem;
       margin-bottom: 1rem;
 
